// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Text /> when passed a color has the specified color 1`] = `
.c0 {
  font-family: 'Open Sans',sans-serif;
  font-weight: 400;
  font-size: 12px;
  color: rgba(255,255,255,1);
}

<p
  class="c0"
  color="rgba(255, 255, 255, 1)"
/>
`;

exports[`<Text /> when passed a component renders that component 1`] = `
.c0 {
  font-family: 'Open Sans',sans-serif;
  font-weight: 400;
  font-size: 12px;
  color: rgba(12,27,42,1);
}

<span
  class="c0"
/>
`;

exports[`<Text /> when passed a size has the specified font size 1`] = `
.c0 {
  font-family: 'Open Sans',sans-serif;
  font-weight: 400;
  font-size: 20px;
  color: rgba(12,27,42,1);
}

<p
  class="c0"
  size="20"
/>
`;

exports[`<Text /> without any props is a paragraph tag with font size 12px and color black 1`] = `
.c0 {
  font-family: 'Open Sans',sans-serif;
  font-weight: 400;
  font-size: 12px;
  color: rgba(12,27,42,1);
}

<p
  class="c0"
/>
`;
